# soup

./: .gitignore  Cargo.toml  Makefile  README.md  tailwind.config.js
src/: config.rs  errors.rs  main.rs
src/components/: layout.rs
src/routes/: general.rs  mod.rs  packages.rs
src/server/: application.rs
