[package]
name = "soup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = "1.5.1"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bowl_core = { git="https://github.com/jackjohn7/bowl_core.git", tag="0.1.0" }
